chore: add compiled stylesheet

--- a/RoadtoGlory v0.6.html
+++ b/RoadtoGlory v0.6.html
@@ -25,7 +25,7 @@
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="./assets/img/thumbnail.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./src/styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="root"></div>
@@ -35,10 +35,23 @@
     <script src="https://cdn.jsdelivr.net/npm/framer-motion@10.16.4/dist/framer-motion.umd.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <script type="text/babel" data-presets="react" data-plugins="proposal-optional-chaining" data-type="module">
-        import NavigationMenu from './src/components/NavigationMenu.jsx';
+    <script type="text/babel" data-presets="react" data-plugins="proposal-optional-chaining">
         const { useState, useEffect, useRef } = React;
         const { motion, AnimatePresence } = window.FramerMotion || {};
+
+        const NavigationMenu = ({ setView }) => (
+            <nav className="grid grid-cols-3 gap-4 mb-6">
+                <button onClick={() => setView('lessonList')} className="flex items-center justify-center bg-primary text-white py-2 px-4 rounded-lg shadow hover:bg-primary-700">
+                    Danh Sách
+                </button>
+                <button onClick={() => setView('createLesson')} className="flex items-center justify-center bg-primary text-white py-2 px-4 rounded-lg shadow hover:bg-primary-700">
+                    Tạo Bài Học
+                </button>
+                <button onClick={() => setView('review')} className="flex items-center justify-center bg-primary text-white py-2 px-4 rounded-lg shadow hover:bg-primary-700">
+                    Ôn Tập
+                </button>
+            </nav>
+        );
 
         // Keys for storing data in localStorage and IndexedDB
         const LOCAL_STORAGE_KEY = 'chineseVocabLessons';
